--- a/views/users/signup.jade
+++ b/views/users/signup.jade
@@ -20,7 +20,7 @@ html(lang="de")
 				form(action="/signup", method="post")
 					.form-group
 						label(for="un") Name
-						input#un(type="text", name="display_name").form-control
+						input#un(type="text", name="display_name", required).form-control
 					.form-group
 						label(for="email") E-Mail
 						input#email(type="text", name="email", required).form-control
