Restructuring views. Working on Friends list.

--- a/views/users/profil.jade
+++ b/views/users/profil.jade
@@ -23,14 +23,12 @@ html(lang="de")
 					li
 						a(href="/logout")
 							span.fa.fa-sign-out
-							| Abmelden
+							| &nbsp;Abmelden
 		.container
 			.page-header.text-center
 				h1
 					span.fa.fa-user &nbsp;
-					| #{_User.local.name}
-			.text-center
-				h2 Kontenverwaltung
+					| Kontenverwaltung
 			.row
 				.col-sm-6
 					.panel.panel-default
