--- a/views/splash.jade
+++ b/views/splash.jade
@@ -3,11 +3,11 @@ html(lang="de")
 	head
 		meta(charset="utf-8")
 		title DCM – DSA Charakter Manager
-		link(rel="stylesheet", href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css")
+		link(rel="stylesheet", href="//netdna.bootstrapcdn.com/bootswatch/3.1.1/spacelab/bootstrap.min.css")
 		link(rel="stylesheet", href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css")
 		style.
 			body {
-				padding: 5em;
+				padding-top: 5em;
 			}
 			a {
 				width: 9em;
@@ -18,6 +18,7 @@ html(lang="de")
 				h1 
 					span.fa.fa-lock &nbsp;
 					| DSA Charakter Manager
+			.text-center
 				a(href="/login").btn.btn-default
 					span.fa.fa-user &nbsp;
 					| Anmelden
