--- a/views/users/friends.jade
+++ b/views/users/friends.jade
@@ -6,7 +6,9 @@ html(lang="de")
 		//link(rel="stylesheet", href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css")
 		link(rel="stylesheet", href="//netdna.bootstrapcdn.com/bootswatch/3.1.1/spacelab/bootstrap.min.css")
 		link(rel="stylesheet", href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css")
+		//script(src="/jquery-2.0.3.min.js")
 		//script(src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js")
+		//script(src="/jquery-ui-1.10.4.custom.min.js")
 	body
 		nav.navbar.navbar-default(role="navigation")
 			.container
@@ -27,7 +29,7 @@ html(lang="de")
 		.container
 			.page-header.text-center
 				h1
-					span.fa.fa-user &nbsp;
+					span.fa.fa-users &nbsp;
 					|  Freunde
 			.row
 				.col-sm-6
@@ -37,6 +39,10 @@ html(lang="de")
 								span.fa.fa-users &nbsp;
 								| Meine Freunde
 						.panel-body
+							ul
+								each __friend in _Friends
+									li
+
 				.col-sm-6
 					.panel.panel-default
 						.panel-heading
@@ -44,3 +50,9 @@ html(lang="de")
 								span.fa.fa-search &nbsp;
 								| Freunde finden
 						.panel-body
+							.input-group
+								input#username-search.form-control(type="text", placeholder="Suche nach Namen")
+								span.input-group-btn
+									button.btn.btn-default(type="button")
+										span.fa.fa-plus
+		script.
