--- a/views/users/chars.jade
+++ b/views/users/chars.jade
@@ -5,27 +5,67 @@ html(lang="de")
 		title DCM – DSA Charakter Manager
 		link(rel="stylesheet", href="//netdna.bootstrapcdn.com/bootswatch/3.1.1/spacelab/bootstrap.min.css")
 		link(rel="stylesheet", href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css")
+		script(src="//code.jquery.com/jquery.min.js")
+		script(src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js")
 	body
 		nav.navbar.navbar-default(role="navigation")
-			.container
-				ul.nav.navbar-nav
-					li
-						a.active Charaktere
-					li
-						a(href="/freunde") Freunde
-				ul.nav.navbar-nav.navbar-right
-					li
-						a(href="/about") Impressum
-					li
-						a(href="/logout")
-							span.fa.fa-sign-out
-							| Abmelden
+			.container-fluid
+				.navbar-header
+					button.navbar-toggle(type="button", data-toggle="collapse", data-target="#navbar-collapse-chars")
+						span.sr-only Navigation
+						span.icon-bar
+						span.icon-bar
+						span.icon-bar
+					a.navbar-brand DCM
+				#navbar-collapse-chars.collapse.navbar-collapse
+					ul.nav.navbar-nav
+						li.active
+							a Helden
+						li
+							a(href="/freunde") Freunde
+						li
+							a(href="/profil") 
+								span.fa.fa-warning.text-danger &nbsp;
+								span Konten
+						li
+							a(href="/nachrichten")
+								span.fa.fa-warning.text-danger &nbsp;
+								span Nachrichten &nbsp;
+								span.badge 0
+					ul.nav.navbar-nav.navbar-right
+						li
+							a(href="/about", title="Info")
+								span.hidden-xs.fa.fa-info-circle.text-info &nbsp;
+								span.visible-xs Info
+						li
+							a(href="/rss", title="Update feed")
+								span.hidden-xs.fa.fa-rss-square.text-warning &nbsp;
+								span.visible-xs Update-Feed
+						li
+							a(href="/logout", title="Abmelden")
+								span.hidden-xs.fa.fa-sign-out &nbsp;
+								span.visible-xs Abmelden
 		.container
 			.page-header.text-center
 				h1
-					span.fa.fa-user &nbsp;
-					span Charaktere &nbsp;
-					span#char-count.badge=_User.chars.length
-			.container
-				ul.list-group
-					li.list-group-item
+					span.fa.fa-file-text-o &nbsp;
+					span Helden &nbsp;
+			.panel.panel-default
+				.panel-heading
+					h4 Meine Charaktere
+				.panel-body
+					ul.list-group
+						each __held in _Own
+							li.list-group-item
+								a(href="/held/"+__held._id)= __held.Person.Name + " ( " + __held.AP.frei + " / " + __held.AP.alle.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ".") + " )"
+				.panel-footer.text-right
+					button.btn.btn-warning.btn-xs(type="button") Helden löschen
+			each __friend in _Group
+				.panel.panel-default
+					.panel-heading
+						h4 Charaktere von #{__friend.local.name}
+					.panel-body
+						ul.list-group
+							each __held in __friend.chars
+								li.list-group-item
+									a(href="/held/"+__held._id)= __held.Person.Name + " ( " + __held.AP.frei + " / " + __held.AP.alle.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ".") + " )"
